--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@neo4j/graphql": "^3.24.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.4.9",
     "@types/react": "18.2.20",
@@ -17,6 +18,9 @@
     "date-fns": "^2.30.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
+    "graphql": "^16.8.0",
+    "graphql-yoga": "^4.0.4",
+    "neo4j-driver": "^5.11.0",
     "next": "13.4.13",
     "postcss": "8.4.27",
     "react": "18.2.0",
