--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.1",
     "@neo4j/graphql": "^3.24.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.4.9",
